Copied from usb. fixed table, progressBar, and sliding underline, with its corresponding css. aswell as adding some colors in theme-default.css and an border-collapse in utility.

--- a/app/css/table.css
+++ b/app/css/table.css
@@ -1,76 +1,86 @@
-/*main table width + border will collapse to one*/
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
+/*Containers*/
+.sq-custom-Table-container{
+    max-width:20%;
+    height:auto;
+  }
+  
+  
+  .sq-custom-navbar{  
+    max-width:100%;
+    height:2em; 
+  }
+  
+  
+  .sq-custom-footer{
+    max-width:100%;
+    height:2em;  
+  }
+  
+  /*Containers end*/
+  
+  th {
+    border:solid 1px black;
+    padding:0.5em;
+  }
+  
+  td {
+    border:solid 1px black;
+    padding:0.5em;
+  }
+  
+  .sq-custom-table-position{
+    width:100%;
+    
+  }
+  
+  
+  /*classes*/
+  
+  /*Add stripe on odd rows (change odd to even for even rows)*/
+  .sq-table-striped tr:nth-child(odd) {
+      background-color: #f2f2f2
+  }
+  
+  /*If wanting to put Border on specific row*/
+  .sq-table-border{
+      border-bottom: solid 1px black;
+  }
+  
+  /*when hovering over table rows*/
+  .sq-table-hover tr:hover{
+      background-color: lightgrey;
+      color: black;
+  }
+  
+  /*misc - can add icon through content*/
+  .sq-table-misc-arrow-up th::after{
+      float: right;
+      content: '\02191';  
+  }
+  
+  /*classes end*/
+  
+
+  
+  /*change size of each row*/
+  .sq-table-row-padding-05{
+    padding-top:0.5em;
+    padding-bottom:0.5em;
+  }
+  
+  .sq-table-row-padding-1{
+    padding-top: 1em;
+    padding-bottom:1em;
+  }
+  
+  .sq-table-row-padding-2{
+    padding-top:1.5em;
+    padding-bottom:1.5em;
+  }
+  
 
 
-/*Styling of table Header*/
-th{
-    padding-bottom: .5em;
-    text-align: left;
-    /*change color*/
-    color: black;
-    background-color:none;
-    font-weight: 800;
-    /* height:80%; */
-    height:30px;
-}
-
-/* Table (TD) cell/data layout all */
-td{
-    text-align: left;
-    font-size: 80%;
-    padding:0px;
-}
-
-
-
-/*Table Borders*/
-
-/* adding a border to all table (Comment to turn off) */
-table, th, td {
-    border-bottom: solid 1px black;
-}
-
-/*specific row to put border on*/
-.sq-table-border{
-    border-bottom: solid 1px black;
-}
-
-
-
-/* Table "Zebra Stripes" */
-
-/*Add stripe on odd rows (change odd to even for even rows)*/
-.sq-table-striped tr:nth-child(odd) {
-    background-color: #f2f2f2
-}
-
-
-
-/* Table Hover over (Change Colors)*/
-
-/*when hovering over table rows*/
-.sq-table-hover tr:hover{
-    background-color: blue;
-    color: red;
-}
-
-
-/* Table Misc*/
-
-/*The Arrow UP icon, at the end of the header*/
-.sq-table-misc-arrow-up th::after{
-    float: right;
-    content: '\02191';
-    color:var(--background);
-    padding-right:1em;
-}
-
-
-
-/*Look at later*/
+/*misc*/
 
 /* tbody tr:not(:slast-child){
     border-bottom: solid .1em var(--divider);
@@ -84,5 +94,6 @@ table, th, td {
     color:var(--secondary);
     padding-right:1em;
 } */
+
 
 
